[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [
    {name = "svetoslav",email = "svetliod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)",
    "websockets (>=16.0,<17.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
